# rust-ddd-rest-api-template

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
domain/: Cargo.toml
domain/src/: aggregate.rs  lib.rs  repository.rs  task.rs  task_repository.rs
domain/src/task/: enum_base.rs  trait_base.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  task_repository_impl.rs
interface/: Cargo.toml
interface/src/: lib.rs  task_controller.rs
src/: domain.rs  infrastructure.rs  interface.rs  main.rs  use_case.rs
src/domain/: repository.rs  task.rs  task_repository.rs
src/infrastructure/: task_repository_impl.rs
src/interface/: task_controller.rs
src/use_case/: create_task_use_case.rs
use-case/: Cargo.toml
use-case/src/: create_task_use_case.rs  lib.rs  postpone_task_use_case.rs
