[package]
name = "rust-ca-interface"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
anyhow = "1.0.73"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ca-domain = { version =  "0.0.1", path = "../domain" }
rust-ca-use-case = { version =  "0.0.1", path = "../use-case" }
