[package]
name = "rust-ca-use-case"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
thiserror = "1.0"
chrono = "0.4.19"
downcast-rs = "1.2.0"
rust-ca-infrastructure = { version =  "0.0.1", path = "../infrastructure" }
rust-ca-domain = { version =  "0.0.1", path = "../domain" }
