[package]
name = "rust-ca-use-case"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
anyhow = "1.0.79"
thiserror = "1.0"
downcast-rs = "1.2.0"
rust-ca-infrastructure = { version =  "0.0.1", path = "../infrastructure" }
rust-ca-domain = { version =  "0.0.1", path = "../domain" }
